[tool.poetry]
name = "ephystoolkit"
version = "0.1.0"
description = ""
authors = ["Ahmad Elsayed <elsayeda.bis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.1"
scipy = "^1.8.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
