[project]
name = "ephystoolkit"
version = "0.1.0"
description = "Custom Python modules for handling electrophysiology data produced by the Cang Lab at UVA."
authors = [
    {name = "Elsayedaa",email = "elsayeda.bis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (>=1.23.1,<2.0.0)",
    "scipy (>=1.8.1,<2.0.0)",
    "pandas (>=1.4.3,<2.0.0)",
    "mat73 (>=0.65,<0.66)",
    "pathexplorer @ https://github.com/Elsayedaa/PathExplorer/archive/refs/tags/v0.1.1.zip",
    "rhd @ https://github.com/Elsayedaa/python_rhd/archive/refs/heads/main.zip"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
